--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^5.0.0",
     "firebase": "^8.2.0",
     "leaflet": "^1.7.1",
+    "leaflet-geosearch": "^3.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
